add link to github

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="recruit">Recruitment\n</string>
     <string name="continuous_recruit">Expedite Recruitment</string>
     <string name="base">Base</string>
+    <string name="github">Github</string>
 
 </resources>
